samples/_failures_safe/1761287380_74dab3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_99ea8cbd.c: In function ‘main’:
./samples/SAFE/__tmp_99ea8cbd.c:180:5: error: expected identifier or ‘(’ at end of input
  180 |     int
      |     ^~~
./samples/SAFE/__tmp_99ea8cbd.c:180:5: error: expected declaration or statement at end of input
